Fixed header css, removed extra gaps. (#818)

--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -16,6 +16,11 @@ smoothly-app>smoothly-notifier {
 	background: none;
 }
 
+header:has(smoothly-burger[visible])>nav>ul smoothly-app-room {
+	width: 100%;
+	height: 4em;
+}
+
 smoothly-app>smoothly-notifier>header {
 	position: sticky;
 	top: 0;
@@ -61,10 +66,6 @@ smoothly-app>smoothly-notifier>header>nav>ul li a {
 	line-height: 1.6cm;
 }
 
-smoothly-app>smoothly-notifier>header>nav>ul li a {
-	line-height: 1.6cm;
-}
-
 smoothly-app>smoothly-notifier>header>nav>ul {
 	width: 100%;
 }
@@ -77,7 +78,6 @@ smoothly-app>smoothly-notifier>header>nav>ul>div.nav-start-container {
 
 smoothly-app>smoothly-notifier>header>nav>ul>div.nav-end-container {
 	display: flex;
-	gap: 1rem;
 	align-items: center;
 	height: 100%;
 	margin-left: auto;
@@ -86,7 +86,6 @@ smoothly-app>smoothly-notifier>header>nav>ul>div.nav-end-container {
 
 smoothly-app>smoothly-notifier>header>nav>ul>[slot="nav-end"] {
 	width: fit-content;
-	gap: 0.5em;
 	align-self: center;
 	height: fit-content;
 	margin-left: 10rem;
@@ -145,7 +144,6 @@ smoothly-app>smoothly-notifier>header>nav>ul li a {
 		margin: 0;
 		align-items: start;
 		justify-content: center;
-		gap: 1em;
 	}
 
 	smoothly-app>smoothly-notifier>header>nav>ul>div.nav-start-container>*:last-child {
